--- a/estilos/style.css
+++ b/estilos/style.css
@@ -154,7 +154,7 @@ nav ul li a:hover {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 25px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 /* CLASSE BASE PARA PRODUTOS - FÁCIL DE REUTILIZAR */
@@ -198,19 +198,19 @@ nav ul li a:hover {
 
 .product-title {
     font-weight: 600;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     color: var(--text-dark);
 }
 
 .product-price {
-    font-size: 1.4rem;
+    font-size: 3rem;
     font-weight: bold;
     color: var(--primary);
-    margin: 10px 0;
+    margin: 10px 0 0 0;
 }
 
 .product-link {
-    margin-top: auto;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -369,4 +369,30 @@ footer {
 }
 .suporte {
     text-decoration: underline;
+}
+.rgb-text-smooth {
+    font-size: 1.5rem;
+    font-weight: bold;
+    background: linear-gradient(
+        45deg,
+        #ff0000 0%,
+        #ff9900 25%,
+        #00ff00 50%,
+        #0099ff 75%,
+        #ff00ff 100%
+    );
+    background-size: 200% auto;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: rgb-shift 4s linear infinite;
+}
+
+@keyframes rgb-shift {
+    0% {
+        background-position: 0% center;
+    }
+    100% {
+        background-position: 200% center;
+    }
 }
